--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "angular-animate": "^1.6.6",
     "angular-ui-router": "^1.0.0-rc.1",
+    "angularjs-datepicker": "^2.1.23",
     "angularjs-toaster": "^2.2.0",
     "bootstrap": "^3.3.7"
   },
