--- a/package.json
+++ b/package.json
@@ -8,9 +8,40 @@
     "angular-ui-router": "^1.0.0-rc.1",
     "angularjs-datepicker": "^2.1.23",
     "angularjs-toaster": "^2.2.0",
-    "bootstrap": "^3.3.7"
+    "bootstrap": "^3.3.7",
+    "browserify-ngannotate": "^2.0.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "angular-mocks": "^1.3.12",
+    "angular-route": "^1.3.12",
+    "browserify": "^9.0.7",
+    "browserify-ngannotate": "^0.7.1",
+    "del": "^1.1.1",
+    "gulp": "^3.9.1",
+    "gulp-cachebust": "0.0.5",
+    "gulp-concat": "^2.5.2",
+    "gulp-install": "^0.4.0",
+    "gulp-jshint": "^1.10.0",
+    "gulp-karma": "0.0.4",
+    "gulp-minify": "^1.0.0",
+    "gulp-ng-html2js": "^0.2.0",
+    "gulp-sass": "^2.0.0",
+    "gulp-sourcemaps": "^1.5.1",
+    "gulp-uglify": "^1.1.0",
+    "gulp-util": "^3.0.4",
+    "gulp-webserver": "^0.9.0",
+    "gulp.spritesmith": "^3.5.3",
+    "jasmine-core": "^2.2.0",
+    "karma": "^0.12.31",
+    "karma-chrome-launcher": "^0.1.7",
+    "karma-firefox-launcher": "^0.1.4",
+    "karma-jasmine": "^0.3.5",
+    "karma-phantomjs-launcher": "^0.1.4",
+    "uglifyjs-webpack-plugin": "^0.4.6",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0",
+    "webpack": "^3.6.0"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "http-server -a localhost -p 8000 -c-1"
